# python-libsbml

./: .gitignore  .gitmodules  .travis.yml  MANIFEST.in  PKG-INFO  README.md  appveyor.yml  config.sh  pyproject.toml  setup.cfg  setup.py  test_libsbml.py
.github/workflows/: experimental_wheels.yml  wheels.yml
appveyor/: deploy_to_pypi.ps1
base/: bzlib.c  libsbml-packages.h  libsbml_wrap.h  local-downcast-converters.cpp  local-downcast-extension.cpp  local-downcast-namespaces.cpp  local-downcast-plugins.cpp  local-downcast.cpp
base/sbml/common/: libsbml-config-common.h  libsbml-config-packages.h  libsbml-namespace.h  libsbml-package.h  libsbml-version.h
base/sbml/conversion/: SBMLLevel1Version1Converter.cpp  SBMLRateOfConverter.h
base/sbml/extension/: RegisterExtensions.cxx  RegisterExtensions.h
base/sbml/math/: DefinitionURLRegistry.h
base/sbml/validator/: L3v2CompatibilityValidator.h  StrictUnitConsistencyValidator.cpp
base/sbml/validator/constraints/: CiElementNot0DComp.cpp  ConsistencyConstraintsDeclared.cxx  FunctionDefinitionRecursion.cpp  IdentifierConsistencyConstraintsDeclared.cxx  InternalConsistencyConstraintsDeclared.cxx  L1CompatibilityConstraintsDeclared.cxx  L2v1CompatibilityConstraintsDeclared.cxx  L2v2CompatibilityConstraintsDeclared.cxx  L2v3CompatibilityConstraintsDeclared.cxx  L2v4CompatibilityConstraintsDeclared.cxx  (+8 more)
deploy/: deploy.sh
libsbml/: __init__.py
script/: libsbml3.py
src/base/: local-downcast-astplugins.cpp  local-downcast-plugins.cpp  winconfig.h  xmlrole.c
swig/: libsbml-packages.h
(+9 files in other folders)
