[metadata]
name = python-libsbml
url = http://sbml.org
download_url = https://pypi.org/project/python-libsbml/
author = SBML Team
author_email = libsbml-team@googlegroups.com
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = LGPL-2.1
description = LibSBML Python API
long_description = file: README.md
keywords =
    SBML
    systems biology markup language
    systems biology
    computational model

[options]
zip_safe = True
python_requires = >=3.5
packages =
    libsbml
package_dir =
    libsbml = src/libsbml

[bdist_wheel]
universal = 1
